--- a/arbitrage_betting.ipynb
+++ b/arbitrage_betting.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "\n",
     "\n",
-    "API_KEY = 'fa8abebbf8093c51d4b40755e9420d9d'\n"
+    "API_KEY = 'ur API key'\n"
    ]
   },
   {
